# automate-anything

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  README.md  README.old.md  annual_stats.Rmd  batch_enroll.py  course_analytics.py  course_description_fetcher.py  course_parser.py  course_scraper.py  courses_data.json  data_scraper.py  data_scraper_modified.py  docker-compose.yml  fetch_course_data.py  helpdesk_notifier.py  main.py  page_updater.py  pyproject.toml  quiz_analysis.py  quiz_comparison.py  quiz_uploader.py  requirements.txt  survey_group.py  test.py  transform_quiz.py
.github/agents/: my-agent.md
alembic/: env.py
alembic/versions/: 259e703b8b68_initial_schema.py  8bb58781e0b1_add_generic_platform_tables_for_phase_8_.py
docs/: SCREENSHOT_GUIDE.md  Screenshot-Guide.md  architecture.mmd
docs/db/: erd.dbml
openhpi-visualizer/: .env.example  README.md  analysis.py  debug.py  main.py  no_title_found..json  requirements.txt  scraper.py  test_scraper.py  visualization.py
scripts/: capture_web_screenshots.py  open_tabs.sh
src/: __init__.py  cli.py  dashboard.py  main.py
src/analysis/: __init__.py  annual_stats.py  course_analytics.py  quiz_analytics.py  quiz_transform.py  user_analysis.py
src/api/: __init__.py  ai.py  analysis.py  automation.py  courses.py  data.py  scraping.py  sources.py
src/core/: config.py  utils.py
src/models/: database.py  tables.py
src/services/: ai_service.py  analysis_orchestrator.py  automation_service.py  scraping_service.py  (+2 more)
tests/: __init__.py  conftest.py  test_ai_api.py  test_ai_service.py  test_analysis_api.py  test_analysis_api_coverage.py  test_analysis_api_extended.py  test_annual_stats.py  test_api.py  test_automation_api.py  test_automation_service.py  test_automation_service_edge_cases.py  test_cli_commands.py  test_config.py  test_course_analytics.py  test_course_parser_service.py  test_courses_api.py  test_courses_api_edge_cases.py  test_database.py  test_final_coverage_boost.py  test_generic_platform.py  test_main_app.py  test_news_scraper.py  test_news_scraper_integration.py  test_quiz_analytics.py  test_quiz_transform.py  test_scraping_api.py  test_scraping_service.py  test_user_analysis.py
(+4 files in other folders)
